update drawer css for overflow fix

--- a/src/components/Drawer.css
+++ b/src/components/Drawer.css
@@ -4,4 +4,5 @@
     width: 748px;
     border-radius: 30px 0 0 30px;
     margin: auto;
+    overflow: hidden;
 }
